--- a/main.html
+++ b/main.html
@@ -9,15 +9,8 @@
 <body>
     <!-- the entire body must be written by student -->
     <div id="outer">
-		<div class="outer1"></div>
-		<div class="outer2"></div>
         <div id="middle">
-			<div class="middle1"></div>
-			<div class="middle2"></div>
-            <div id="inner">
-				<div class="inner1"></div>
-				<div class="inner2"></div>
-			</div>
+            <div id="inner"></div>
         </div>
     </div>
     <script type="text/javascript" src="./script.js">
